--- a/pgsql.yml
+++ b/pgsql.yml
@@ -7,7 +7,8 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - postgres_data:/Users/mywo/postgresql/data/
+      # binding postgres_data volume to the "/var/lib/postgresql/data/" directory in the container
+      - postgres_data:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=hello_fastapi
       - POSTGRES_PASSWORD=hello_fastapi
